Home infinite scroll overlap problem fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -151,6 +151,10 @@ input[type='submit'], button[type='submit'] {
 	grid-row : 3 / span 4;
 }
 
+.grid-r-1-1-4 {
+	grid-template-rows : 1fr 1fr 4fr !important;
+}
+
 .grid-r-1-3-6 {
 	grid-template-rows : 1fr 3fr 6fr !important;
 }
@@ -350,7 +354,6 @@ button:disabled {
 
 /* ------- Infinite Scroll */
 .infinite-scroll {
-	height                : fit-content;
 	grid-column           : 1 / span 6;
 	grid-auto-rows        : 2fr;
 	display               : grid;
